Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14053

Crash on removing kit

    XMLWordPrintable

Details

    • 9548e7adadaa631e1dc43c6ffb60cc746afebafd

    Description

      #0  0x00007ffff76b9039 in QVector<Utils::TreeItem*>::indexOf (this=0x18, t=@0x7fffffff8b90: 0x2cafa20, from=0) at /home/dteske/git/qt5/qtbase/include/QtCore/../../src/corelib/tools/qvector.h:763
      #1  0x00007ffff76b84be in Utils::TreeModel::indexFromItem (this=0x2caf480, item=0x2cafa20) at /home/dteske/git/qtcreator-super/qtcreator/src/libs/utils/treemodel.cpp:1014
      #2  0x00007ffff76b74e8 in Utils::TreeItem::index (this=0x2cafa20) at /home/dteske/git/qtcreator-super/qtcreator/src/libs/utils/treemodel.cpp:767
      #3  0x00007ffff76b72d5 in Utils::TreeItem::update (this=0x2cafa20) at /home/dteske/git/qtcreator-super/qtcreator/src/libs/utils/treemodel.cpp:731
      #4  0x00007fffe7287ed4 in ProjectExplorer::Internal::KitModel::setDefaultNode (this=0x2caf480, node=0x2d003a0) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmodel.cpp:305
      #5  0x00007fffe72884a0 in ProjectExplorer::Internal::KitModel::changeDefaultKit (this=0x2caf480) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmodel.cpp:370
      #6  0x00007fffe728b4a3 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ProjectExplorer::Internal::KitModel::*)()>::call(void (ProjectExplorer::Internal::KitModel::*)(), ProjectExplorer::Internal::KitModel*, void**) (f=(void (ProjectExplorer::Internal::KitModel::*)(ProjectExplorer::Internal::KitModel * const)) 0x7fffe7288402 <ProjectExplorer::Internal::KitModel::changeDefaultKit()>, 
          o=0x2caf480, arg=0x7fffffff9020) at /home/dteske/git/qt5/qtbase/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:500
      #7  0x00007fffe728b2f1 in QtPrivate::FunctionPointer<void (ProjectExplorer::Internal::KitModel::*)()>::call<QtPrivate::List<>, void>(void (ProjectExplorer::Internal::KitModel::*)(), ProjectExplorer::Internal::KitModel*, void**) (f=(void (ProjectExplorer::Internal::KitModel::*)(ProjectExplorer::Internal::KitModel * const)) 0x7fffe7288402 <ProjectExplorer::Internal::KitModel::changeDefaultKit()>, o=0x2caf480, 
          arg=0x7fffffff9020) at /home/dteske/git/qt5/qtbase/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:519
      #8  0x00007fffe728afd3 in QtPrivate::QSlotObject<void (ProjectExplorer::Internal::KitModel::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, 
          this_=0x2d9bb40, r=0x2caf480, a=0x7fffffff9020, ret=0x0) at /home/dteske/git/qt5/qtbase/include/QtCore/../../src/corelib/kernel/qobject_impl.h:143
      #9  0x00007ffff62599db in QtPrivate::QSlotObjectBase::call (this=0x2d9bb40, r=0x2caf480, a=0x7fffffff9020) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
      #10 0x00007ffff6256a21 in QMetaObject::activate (sender=0x8d74d0, signalOffset=3, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3702
      #11 0x00007ffff6256332 in QMetaObject::activate (sender=0x8d74d0, m=0x7fffe783e6e0 <ProjectExplorer::KitManager::staticMetaObject>, local_signal_index=4, argv=0x0) at kernel/qobject.cpp:3582
      #12 0x00007fffe7415e33 in ProjectExplorer::KitManager::defaultkitChanged (this=0x8d74d0) at .moc/debug-shared/moc_kitmanager.cpp:291
      #13 0x00007fffe727c206 in ProjectExplorer::KitManager::setDefaultKit (k=0x108bba0) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmanager.cpp:515
      #14 0x00007fffe727c0c4 in ProjectExplorer::KitManager::deregisterKit (k=0x1e92b00) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmanager.cpp:502
      #15 0x00007fffe7284199 in ProjectExplorer::Internal::KitManagerConfigWidget::removeKit (this=0x2cafa60) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmanagerconfigwidget.cpp:296
      #16 0x00007fffe72875f0 in ProjectExplorer::Internal::KitModel::apply (this=0x2caf480) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitmodel.cpp:223
      #17 0x00007fffe728c7e4 in ProjectExplorer::KitOptionsPage::apply (this=0x9b0990) at /home/dteske/git/qtcreator-super/qtcreator/src/plugins/projectexplorer/kitoptionspage.cpp:263
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            dt Daniel Teske
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes