Kit: Fix possible crash

Fix crash in KitOptionsPage related to setting the default kit

Task-number: QTCREATORBUG-14053
Change-Id: Icf10b2596afa0a3b871aca0685a6f7d3a59ab022
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>